--- a/Training.ipynb
+++ b/Training.ipynb
@@ -66,7 +66,7 @@
     "    # Load weights trained on MS COCO, but skip layers that\n",
     "    # are different due to the different number of classes\n",
     "    # See README for instructions to download the COCO weights\n",
-    "    model.load_weights(COCO_MODEL_PATH, by_name=True,\n",
+    "    model.load_weights(COCO_WEIGHTS_PATH, by_name=True,\n",
     "                       exclude=[\"mrcnn_class_logits\", \"mrcnn_bbox_fc\", \n",
     "                                \"mrcnn_bbox\", \"mrcnn_mask\"])\n",
     "elif init_with == \"last\":\n",
