--- a/inference.ipynb
+++ b/inference.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "config = custom.CustomConfig() \n",
-    "custom_DIR = os.path.join(ROOT_DIR, \"customImages\") #your dataset directory"
+    "custom_DIR = os.path.join(ROOT_DIR, \"CustomImages\") #your dataset directory"
    ]
   },
   {
